feat: added evolved style localisation for vanilla origins

--- a/localisation/english/replace/zz_evolved_origins_l_english.yml
+++ b/localisation/english/replace/zz_evolved_origins_l_english.yml
@@ -51,6 +51,7 @@ l_english:
 	tec_loc_o_unlocks_holding:0 "§EUnlocks Holding:§!"
 
 	tec_loc_o_pops:0 "§EStarting Pops:§!"
+	tec_loc_o_secondary_species:0 "§ESecondary Species:§!"
 	tec_loc_o_condition:0 "§EStarting Condition:§!"
 	tec_loc_o_alteration:0 "§EStarting Alteration:§!"
 
@@ -80,7 +81,7 @@ l_english:
 	tec_loc_o_initial_pick:0 "§EInitial pick bonus:§!"
 
 	tec_loc_o_restriction:0 "§ERestriction:§!"
-	tec_loc_o_penalty:0 "§EPenalty:§!"
+	tec_loc_o_penalty:0 "§PPenalties:§!"
 	tec_loc_o_gameplay_alteration:0 "§EGameplay Alteration:§!"
 
 	tec_loc_o_warning:0 "§E£trigger_tec_warning£ Warning:§!"
@@ -145,8 +146,8 @@ l_english:
 	origin_default:0 "Prosperous Unification"
 	origin_default_desc:0 "A stable planetary unification has allowed this civilization to prosper and grow."
 
-	origin_tooltip_default_effects:3 "Fruit of an early prosperous planet development, the capital has enjoyed a big boon of productivity and population.\n\n$tec_loc_o_pops$ §H£pop£ Settled Stability§!\n- Start the game with §G+4§! additional £pop£ Pops of the §YMain Species§!.\n\n$tec_loc_o_homeworld_bonuses$ §H£planet£ Prosperous Economy§!\n$t$- ['concept_generator_district', £district£ $district_generator_plural$]: §G+1§!\n$t$- ['concept_farming_district', £district£ $district_farming_plural$]: §G+1§!\n$t$- Starts with the ['concept_prosp_uni'] Planetary Modifier\n\n$tec_loc_o_unlocks_technology$ ['concept_planetary_unification', £society_research£ $tech_planetary_unification$]\n\n$tec_loc_o_overtime$ §H£unity£ Prolonged Prosperity§!\nThe initial planetary bonus modifier will become a smaller permanent bonus after §Y20§! years."
-	origin_tooltip_default_effects_lithoid:3 "Fruit of an early prosperous planet development, the capital has enjoyed a big boon of productivity and population.\n\n$tec_loc_o_pops$ §H£pop£ Settled Stability§!\n- Start the game with §G+4§! additional £pop£ Pops of the §YMain Species§!.\n\n$tec_loc_o_homeworld_bonuses$ §H£planet£ Prosperous Economy§!\n$t$- ['concept_generator_district', £district£ $district_generator_plural$]: §G+1§!\n$t$- ['concept_mining_district', £district£ $district_mining_plural$]: §G+1§!\n$t$- Starts with the ['concept_prosp_uni'] Planetary Modifier\n\n$tec_loc_o_unlocks_technology$ ['concept_planetary_unification', £society_research£ $tech_planetary_unification$]\n\n$tec_loc_o_overtime$ §H£unity£ Prolonged Prosperity§!\nThe initial planetary bonus modifier will become a smaller permanent bonus after §Y20§! years."
+	origin_tooltip_default_effects:3 "Fruit of an early prosperous planet development, the capital has enjoyed a big boon of productivity and population\n\n$tec_loc_o_pops$ §H£pop£ Settled Stability§!\n- Start the game with §G+4§! additional £pop£ Pops of the §Y$tec_loc_main_species$§!\n\n$tec_loc_o_homeworld_bonuses$ §H£planet£ Prosperous Economy§!\n- ['concept_generator_district', £district£ $district_generator_plural$]: §G+1§!\n- ['concept_farming_district', £district£ $district_farming_plural$]: §G+1§!\n- Starts with the ['concept_prosp_uni'] Planetary Modifier\n\n$tec_loc_o_unlocks_technology$ ['concept_planetary_unification', £society_research£ $tech_planetary_unification$]\n\n$tec_loc_o_overtime$ §H£unity£ Prolonged Prosperity§!\n- The initial planetary bonus modifier will become a smaller permanent bonus after §Y20§! years."
+	origin_tooltip_default_effects_lithoid:3 "Fruit of an early prosperous planet development, the capital has enjoyed a big boon of productivity and population.\n\n$tec_loc_o_pops$ §H£pop£ Settled Stability§!\n- Start the game with §G+4§! additional £pop£ Pops of the §Y$tec_loc_main_species$§!\n\n$tec_loc_o_homeworld_bonuses$ §H£planet£ Prosperous Economy§!\n- ['concept_generator_district', £district£ $district_generator_plural$]: §G+1§!\n- ['concept_mining_district', £district£ $district_mining_plural$]: §G+1§!\n- Starts with the ['concept_prosp_uni'] Planetary Modifier\n\n$tec_loc_o_unlocks_technology$ ['concept_planetary_unification', £society_research£ $tech_planetary_unification$]\n\n$tec_loc_o_overtime$ §H£unity£ Prolonged Prosperity§!\n- The initial planetary bonus modifier will become a smaller permanent bonus after §Y20§! years."
 
 		#VANILLA_origin_tooltip_default_effects:3 "$origin_tooltip_default_effects_start$$TABBED_NEW_LINE$- ['concept_farming_district', £district£ $district_farming_plural$]: §G+1§!$origin_tooltip_default_effects_end$"
 		#VANILLA_origin_tooltip_default_effects_start: "- $INITIAL_POPS$ §G+4§!$NEW_LINE$- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_generator_district', £district£ $district_generator_plural$]: §G+1§!"
@@ -176,7 +177,7 @@ l_english:
  # /
 
  # ------------------------------------------------- Void dwellers
-	origin_tooltip_void_dwellers_effects:9 "Bound to orbital stations, this species thrives in the vacuum of space.\n\n$tec_loc_o_homeworld_alteration$ §H£planet£ Orbital Habitat§!\n- The capital is replaced by a ['concept_pc_habitat']\n- $ap_voidborn_habitat_effect$\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_void_dweller_1$§!\nYour species are forced to have the following traits:\n$t$- ['concept_void_dweller', $trait_void_dweller_1$]\n$t$- ['concept_habitat_preference', $trait_pc_habitat_preference$] (Organic Species)\n\n$tec_loc_o_unlocks_technology$ ['concept_habitat_1', £engineering_research£ $tech_habitat_1$]\nAllows the construction of extra Habitats.\n\n$tec_loc_o_unlocks_technology_option$ ['concept_habitat_2', £engineering_research£ $tech_habitat_2$]\n\n$tec_loc_o_alteration$ §H£planet£ Prospected Systems§!\n['concept_guaranteed_colonies'] are replaced with Resource-rich systems instead.\n\n$tec_loc_o_restriction$ This empire has increased Colonizer cost, Habitats are instantaneously colonized and empty habitats can be colonized with a planetary decision."
+	origin_tooltip_void_dwellers_effects:9 "Bound to orbital stations, this species thrives in the vacuum of space.\n\n$tec_loc_o_homeworld_alteration$ §H£planet£ Orbital Habitat§!\n- The capital is replaced by a ['concept_pc_habitat']\n- $ap_voidborn_habitat_effect$\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_void_dweller_1$§!\n- Your species are forced to have the following traits:\n$t$- ['concept_void_dweller', $trait_void_dweller_1$]\n$t$- ['concept_habitat_preference', $trait_pc_habitat_preference$]\n\n$tec_loc_o_unlocks_technology$ ['concept_habitat_1', £engineering_research£ $tech_habitat_1$]\n- Allows the construction of extra Habitats\n\n$tec_loc_o_unlocks_technology_option$ ['concept_habitat_2', £engineering_research£ $tech_habitat_2$]\n\n$tec_loc_o_unlocks_feature$ §H£engineering_research£ Integrated Settling§!\n- Habitats are instantaneously §YColonized§! after being built (this extends to other §YSpace Arcologies§!)\n- Empty habitats can be colonized with a §Y$tec_loc_planet_decision$§!\n\n$tec_loc_o_alteration$ §H£planet£ Prospected Systems§!\n- ['concept_guaranteed_colonies'] are replaced with Resource-rich systems instead\n\n$tec_loc_o_penalty$ §H£colony_ship£ Colonization Fatigue§!\n- $colonizer$ $tec_loc_influence$ Build Cost: §R+100§!\n- $colonizer$ $tec_loc_alloys$ Build Cost: §R+500§!"
 
 		#VANILLA_origin_tooltip_void_dwellers_effects:9 "- $HOMEWORLD$ ['concept_pc_habitat']$NEW_LINE$- $SPECIES_TRAITS$$TABBED_NEW_LINE$- ['concept_void_dweller', $trait_void_dweller_1$]$TABBED_NEW_LINE$- ['concept_habitat_preference', $trait_pc_habitat_preference$]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_habitat_1', £engineering_research£ $tech_habitat_1$]$NEW_LINE$- $GUARANTEED_RESEARCH_OPTION_STRING$ ['concept_habitat_2', £engineering_research£ $tech_habitat_2$]$NEW_LINE$- ['concept_guaranteed_colonies']: Resource-rich systems instead of Colonizable Planets $NEW_LINE$- $ap_voidborn_habitat_effect$"
 
@@ -193,10 +194,8 @@ l_english:
 	origin_post_apocalyptic:0 "$civic_post_apocalyptic$"
 	origin_post_apocalyptic_desc:1 "Baptized by nuclear fire, this civilization has faced total annihilation - and survived. Devastated yet unbroken, they have rebuilt civilization from the ashes of their old world."
 
-	origin_tooltip_post_apocalyptic_effects: "Survivors against all odds, this civilization thrives in a devastated world.\n\n$tec_loc_o_homeworld_alteration$ §H£planet£ Tomb World§!\nHomeworld is a devastated ['concept_pc_nuked'].\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_survivor$§!\nYour species start with the ['concept_survivor'] trait.\n\n"
+	origin_tooltip_post_apocalyptic_effects: "Survivors against all odds, this civilization thrives in a devastated world.\n\n$tec_loc_o_homeworld_alteration$ §H£planet£ Tomb World§!\n- Homeworld is a devastated ['concept_pc_nuked']\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_survivor$§!\n- Your §Y$tec_loc_main_species$§! start with the ['concept_survivor'] Trait\n\n"
 
-	concept_survivor: "$trait_survivor$"
-	concept_survivor_desc: "- Tomb World Habitability: §G+70%§!\n- Amenities usage: §G-10%§!\n- Resources from jobs: §G+5%§!\n\n§L$trait_survivor_desc$§!"
 
 		#VANILLA_origin_tooltip_post_apocalyptic_effects: "- $HOMEWORLD$ ['concept_pc_nuked']$NEW_LINE$- $SPECIES_TRAITS$ ['concept_survivor']"
 
@@ -206,7 +205,7 @@ l_english:
  # ------------------------------------------------- Mechanist
 	origin_mechanists:0 "$civic_mechanists$"
 	origin_mechanists_desc:0 "This civilization has been preoccupied with the idea of metallic automatons since the early Steam Age. Although many said it could not be done, the first true robots left the assembly lines long before even rudimentary space flight was achieved."
-	origin_tooltip_mechanists_effects:3 "The development of robotic technologies in an accelerated speed has skyrocketed the production of mechanical units.\n\n$tec_loc_o_pops$ §H£job_roboticist£ Robotic Population§!\n- Start the game with §G+2§! additional £pop£ Pops of the §YMain Species§!.\n- Replace §G+10§! £pop£ Pops with ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ Robot] Pops\n- New robotic pops will start with ['trait:trait_auto_mod_robotic'] Trait\nAllows the construction of extra £job_roboticist£ $tec_robot_subname$, and provides the §Y£building£ Infrastructure§! for it.\n\n$tec_loc_o_unlocks_feature$ §HRobotic Technologies§!\n- Starts with ['concept_tec_tech_powered_exoskeletons'] and ['concept_tec_tech_robotic_workers'] Technologies researched\n- Starts with research option ['concept_tec_tech_robomodding']"
+	origin_tooltip_mechanists_effects:3 "The development of robotic technologies in an accelerated speed has skyrocketed the production of mechanical units.\n\n$tec_loc_o_pops$ §H£job_roboticist£ Robotic Population§!\n- Start the game with §G+2§! additional £pop£ Pops of the §Y$tec_loc_main_species$§!\n- Replace §G+10§! £pop£ Pops with ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ Robotic] Pops\n\n$tec_loc_o_secondary_species$ §H£mod_planet_jobs_robotic_produces_mult£ $tec_robot_subname$§!\n- Robotic pops will start with ['trait:trait_auto_mod_robotic'] Trait\n- Start with ['building:building_robot_assembly_plant', £building£ $building_robot_assembly_plant$] to assemble §Y$tec_robot_subname$§!\n\n$tec_loc_o_unlocks_feature$ §HRobotic Technologies§!\n- Starts with ['concept_tec_tech_powered_exoskeletons'] and ['concept_tec_tech_robotic_workers'] Technologies researched\n- Starts with research option ['concept_tec_tech_robomodding']"
  
 	tec_robot_subname:0 "Robotic Units"
 
@@ -218,7 +217,7 @@ l_english:
  # ------------------------------------------------- Syncretic
 	origin_syncretic_evolution:0 "$civic_syncretic_evolution$"
 	origin_syncretic_evolution_desc:0 "A second species forms an integral part of this civilization. They are big, strong, and most of them have the intelligence of a particularly dim-witted child. Ancient wars have culled their species of their most aggressive tendencies, leaving them quite servile."
-	origin_tooltip_syncretic_evolution_effects: "Two species developed on the same planet, and while one advanced and thrived in technological and intellectual development, the other has yet to reach its level, being used as servant species to guide.\n\n$tec_loc_o_pops$ §H£pop£ Syncretic Coexistance§!\n- Start the game with §G+2§! additional £pop£ Pops of the §YMain Species§!.\n- Replace §G+12§! £pop£ Pops being of another, subservient, species.\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_syncretic_proles$§!\n- Subservient species are forced to have the ['concept_syncretic_proles'] trait."
+	origin_tooltip_syncretic_evolution_effects: "Two species developed on the same planet, and while one advanced and thrived in technological and intellectual development, the other has yet to reach its level, being used as servant species to guide.\n\n$tec_loc_o_pops$ §H£pop£ Syncretic Coexistance§!\n- Start the game with §G+2§! additional £pop£ Pops of the §Y$tec_loc_main_species$§!.\n- Replace §G+12§! $tec_loc_pops$ with §YSyncretic§! Pops\n\n$tec_loc_o_secondary_species$ §H£pop£ Syncretic§!\n- Start with the ['concept_syncretic_proles'] Trait"
 
 		#VANILLA_origin_tooltip_syncretic_evolution_effects: "- £pop£ §IPops§! with ['concept_syncretic_proles'] Trait: 12"
 		
@@ -258,7 +257,50 @@ l_english:
  		#VANILLA_origin_tooltip_fruitful_effects: "- Space Fauna: Disperse ['concept_seed_pod', Seed Pods] throughout the galaxy \n- $AVAILABLE_STARBASE_BUILDINGS$ ['concept_sm_feeder', Starseed Gardens] \n- $AVAILABLE_BOMBARDMENT_STANCE$ ['concept_seed_bombing' ]\n- $HOME_SYSTEM$ ['concept_tiyanki' ] in a neighboring system"
  # /
 
-# EVOLVED
+	# Life seeded
+	origin_tooltip_life_seeded_effects: "$tec_loc_o_homeworld_alteration$ §H£planet£ Perfect World§!\n- Homeworld is a beautiful ['concept_pc_gaia'] (Size: £planetsize£ 30)\n- Starts with §IRare Planetary Features§!\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $concept_gaia_preference$§!\n- Your §Y$tec_loc_main_species$§! start with the ['concept_gaia_preference'] Trait\n\n$tec_loc_o_penalty$ §H£planetsize£ Rare Gem§!\n- There are no ['concept_guaranteed_colonies']"
+
+	origin_tooltip_life_seeded_machine_effects: "$origin_tooltip_life_seeded_effects$\n$ORIGIN_REQUIRES_ROBO_MODDING$"
+
+	# remnants
+	origin_tooltip_remnants_effects:5 "$tec_loc_o_homeworld_alteration$ §H£planet£ Ruined World§!\n- Homeworld is a beautiful ['concept_pc_relic'] (Size: £planetsize£ 22)\n- Starts with 6 ['concept_ruined_arcology', $concept_ruined_arcology$] Blockers\n[GetRemnantAncientRelicEffect]"
+	RemnantAncientRelicEffect:1 "- Starts with the ['concept_archaeostudies_faculty', £building£ $building_archaeostudies_faculty$] Building\n\n$tec_loc_o_unlocks_technology_option$ ['concept_archaeostudies', £society£ $tech_archaeostudies$]"
+
+	# scion
+	origin_tooltip_scion_effects:3 "$tec_loc_o_condition$ §H£scion£ Ancient Guidance§!\n- Start as a ['concept_scion', £scion£ Scion] of a ['concept_fallen_empire'] Overlord\n- §YFallen Empire§! present in the galaxy regardless of Galaxy settings\n- Chance of receiving powerful gifts from Overlord\n\n$tec_loc_o_homeworld_alteration$ §H£mod_planet_hyperlane_range_add£ Olden Route§!\n- Connected to Overlord's capital via a ['concept_wormhole']"
+
+	# dormant
+
+	origin_tooltip_galactic_doorstep_effects:3 "$tec_loc_o_homeworld_alteration$ §H£mod_ship_science_survey_speed£ Sleeping Gate§!\n- Start with a Dormant ['concept_gateway'] in your §Y£sector_capital£ Capital§! System"
+
+	# life seeded
+
+	origin_tooltip_tree_effects:4 "$tec_loc_o_homeworld_alteration$ §H£mod_ship_science_survey_speed£ Origin of Life§!\n- Start with a ['concept_tree_of_life'] $tec_loc_planet_feature$\n\n$tec_loc_o_gameplay_alteration$ §H£planet£ Sapling Seeding§!\n- Colonized Planets get ['concept_tree_of_life_sapling'] $tec_loc_planet_feature$\n- Colonies without the §YTree of Life Sapling§! can do the ['concept_transplant_tree_of_life'] $tec_loc_planet_decision$\n\n$tec_loc_o_unlocks_holding$ ['concept_tree_of_life_holding', §H£building£ $holding_tree_of_life_sapling$§!]\n- Bring the effects of §Y$concept_tree_of_life_sapling$§! to Subjects\n\n$tec_loc_o_penalty$ §H£planet£ Sapling Dependency§!\n- Colonies without the §YTree of Life Sapling§! get the ['concept_no_lifetree'] Planetary Modifier"
+	origin_tooltip_tree_negative_effects: ""
+
+	# shoulder of giants
+	origin_tooltips_shoulders_of_giants_effects:2 "$tec_loc_o_homeworld_alteration$ §H£upgrade£ The Greatness Before§!\n- Starts with the ['concept_ex_gravitas'] ['concept_archaeology_site'] related to a mysterious benefactor\n\n$tec_loc_o_penalty$ §H£blocker£ Captured Attention§!\n- Precursor Event Chains blocked until this mystery is solved"
+	# origin_tooltips_shoulders_of_giants_negative_effects: "- Precursor Event Chains blocked until this mystery is solved"
+
+	# lithoid
+
+	origin_tooltip_lithoid_effects:4 "$tec_loc_o_homeworld_alteration$ §H£blocker£ Meteoric Rise§!\n- Starts with the ['concept_massive_crater'] $tec_loc_planet_feature$\n- Starts with 4 ['concept_buried_lithoids'] $BLOCKER_DEPOSIT$\n\n$tec_loc_o_unlocks_feature$ §H£mod_planet_orbital_bombardment_damage£ Galactic Golf§!\n- Access to §YLithoid Meteorites§! Colony Ships\n- Planets Colonized with §YLithoid Meteorites§! start with §G2§! §Y$concept_buried_lithoids$§! Blockers and ['concept_lithoid_crater'] $tec_loc_planet_modifier$\n\n$tec_loc_o_unlocks_holding$ ['concept_experimental_crater', §H£building£ $holding_experimental_crater$§!]\n- Can be built on Subjects colonies"
+
+	# machine
+
+	origin_tooltip_machine_effects:3 "$tec_loc_o_homeworld_alteration$ §H£blocker£ Mechanized Planet§!\n- Homeworld is a lifeless ['concept_pc_machine']\n- Start with a ['concept_malfunctioning_replicator_bay'] $BLOCKER_DEPOSIT$\n- Starts with a ['concept_consolidated_resources'] $tec_loc_planet_feature$\n- If combined with the ['civic:civic_machine_assimilator'] Civic:\n$t$- You also get the ['concept_organic_slurry'] $tec_loc_planet_feature$\n\n$tec_loc_o_penalty$ §H£minerals£ Excavated System§!\n- Planets in your Capital System are ['concept_pc_molten', Molten Worlds] or ['concept_pc_barren', Barren Worlds] devoid of any resources"
+
+	# hegemon
+	origin_tooltip_hegemon_effects:2 "$tec_loc_o_condition$ §H£opinion£ Sphere of Influence§!\n- Leader of a ['concept_hegemony_federation'] ['concept_common_ground_federation']\n\n$tec_loc_o_alteration$ §H£planet£ Subjects within reach§!\n- ['concept_guaranteed_colonies'] are §YReplaced§! with Federation members\n\n$tec_loc_o_unlocks_tradition$ §H£unity£ Diplomacy§!\nStarts with the following traditions selected:\n$t$- ['concept_diplomacy_traditions']\n$t$- ['concept_tr_diplomacy_the_federation']"
+
+	# doomsday
+	origin_tooltip_doomsday_effects: "$tec_loc_o_homeworld_alteration$ §H£mod_planet_orbital_bombardment_damage£ Ticking Clock Planet§!\n- Starts with ['concept_doomsday_modifier']\n- Your Capital will §REXPLODE§! within §I35 to 45 years§!$tec_loc_planet_modifier$\n\n$tec_loc_o_penalty$ §H£trigger_no£ Nowhere to Go§!\n- There are no ['concept_guaranteed_colonies']"
+
+	# lost colony
+
+	origin_tooltip_lost_colony_effects:3 "$tec_loc_o_homeworld_alteration$ §H£mod_planet_orbital_bombardment_damage£ Lost yet Alive§!\n- Starts with ['concept_colonial_spirit'] $tec_loc_planet_modifier$\n\n$tec_loc_o_condition$ §H£planet£ Where we come From§!\n- An ['concept_advanced_empire'] of the same species is present in the galaxy\n\n$tec_loc_o_penalty$ §H£mod_habitability_ceil_add£ Second Home§!\n$STARTING_NOT_HOMEWORLD$"
+	# origin_tooltip_lost_colony_negative_effects: "$STARTING_NOT_HOMEWORLD$"
+	# EVOLVED
 # ------------------------------------------------------------
  # ------------------------------------------------- Mega origins
 
