--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -161,8 +161,10 @@
 	tec_loc_deposits: "$tec_loc_deposit$s"
 	tec_loc_resource_deposit: "£tec_deposit£ Resource Deposit"
 	tec_loc_resource_deposits: "$tec_loc_resource_deposit$s"
-	tec_loc_planet_feature: "£tec_planet_feature£ Planet Feature"
+	tec_loc_planet_feature: "£tec_planet_feature£ Planetary Feature"
 	tec_loc_planet_features: "$tec_loc_planet_feature$s"
+	tec_loc_planet_modifier: "£time£ Planet Modifier"
+	tec_loc_planet_modifiers: "$tec_loc_planet_feature$s"
 	tec_loc_planet_natural_feature: "£tec_planet_feature£ Natural Feature"
 	tec_loc_planet_natural_features: "$tec_loc_planet_natural_feature$s"
 	tec_loc_planet_engineered_feature: "£tec_planet_feature£ Engineered Feature"
@@ -202,6 +204,7 @@
 
 	tec_loc_terraform_speed:0 "£mod_country_terraform_speed_mult£ $MOD_COUNTRY_TERRAFORM_SPEED_MULT$"
 
+	tec_loc_main_species: "Main Species"
 	tec_loc_empire:0 "£empire£ Empire"
 
 	tec_loc_building:0 "£building£ Building"
