feat: improved tooltips for more origins

--- a/localisation/english/replace/zz_evolved_origins_l_english.yml
+++ b/localisation/english/replace/zz_evolved_origins_l_english.yml
@@ -205,7 +205,7 @@ l_english:
  # ------------------------------------------------- Mechanist
 	origin_mechanists:0 "$civic_mechanists$"
 	origin_mechanists_desc:0 "This civilization has been preoccupied with the idea of metallic automatons since the early Steam Age. Although many said it could not be done, the first true robots left the assembly lines long before even rudimentary space flight was achieved."
-	origin_tooltip_mechanists_effects:3 "The development of robotic technologies in an accelerated speed has skyrocketed the production of mechanical units.\n\n$tec_loc_o_pops$ §H£job_roboticist£ Robotic Population§!\n- Start the game with §G+2§! additional £pop£ Pops of the §Y$tec_loc_main_species$§!\n- Replace §G+10§! £pop£ Pops with ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ Robotic] Pops\n\n$tec_loc_o_secondary_species$ §H£mod_planet_jobs_robotic_produces_mult£ $tec_robot_subname$§!\n- Robotic pops will start with ['trait:trait_auto_mod_robotic'] Trait\n- Start with ['building:building_robot_assembly_plant', £building£ $building_robot_assembly_plant$] to assemble §Y$tec_robot_subname$§!\n\n$tec_loc_o_unlocks_feature$ §HRobotic Technologies§!\n- Starts with ['concept_tec_tech_powered_exoskeletons'] and ['concept_tec_tech_robotic_workers'] Technologies researched\n- Starts with research option ['concept_tec_tech_robomodding']"
+	origin_tooltip_mechanists_effects:3 "The development of robotic technologies in an accelerated speed has skyrocketed the production of mechanical units.\n\n$tec_loc_o_pops$ §H£job_roboticist£ Robotic Population§!\n- Start the game with §G+2§! additional $tec_loc_pops$ of the §Y$tec_loc_main_species$§!\n- Replace §G+10§! $tec_loc_pops$ with ['concept_robots', £mod_planet_jobs_robotic_produces_mult£ Robotic] Pops\n\n$tec_loc_o_secondary_species$ §H£mod_planet_jobs_robotic_produces_mult£ $tec_robot_subname$§!\n- Robotic pops will start with ['trait:trait_auto_mod_robotic'] Trait\n- Start with ['building:building_robot_assembly_plant', £building£ $building_robot_assembly_plant$] to assemble §Y$tec_robot_subname$§!\n\n$tec_loc_o_unlocks_feature$ §HRobotic Technologies§!\n- Starts with ['concept_tec_tech_powered_exoskeletons'] and ['concept_tec_tech_robotic_workers'] Technologies researched\n- Starts with research option ['concept_tec_tech_robomodding']"
  
 	tec_robot_subname:0 "Robotic Units"
 
@@ -217,7 +217,7 @@ l_english:
  # ------------------------------------------------- Syncretic
 	origin_syncretic_evolution:0 "$civic_syncretic_evolution$"
 	origin_syncretic_evolution_desc:0 "A second species forms an integral part of this civilization. They are big, strong, and most of them have the intelligence of a particularly dim-witted child. Ancient wars have culled their species of their most aggressive tendencies, leaving them quite servile."
-	origin_tooltip_syncretic_evolution_effects: "Two species developed on the same planet, and while one advanced and thrived in technological and intellectual development, the other has yet to reach its level, being used as servant species to guide.\n\n$tec_loc_o_pops$ §H£pop£ Syncretic Coexistance§!\n- Start the game with §G+2§! additional £pop£ Pops of the §Y$tec_loc_main_species$§!.\n- Replace §G+12§! $tec_loc_pops$ with §YSyncretic§! Pops\n\n$tec_loc_o_secondary_species$ §H£pop£ Syncretic§!\n- Start with the ['concept_syncretic_proles'] Trait"
+	origin_tooltip_syncretic_evolution_effects: "Two species developed on the same planet, and while one advanced and thrived in technological and intellectual development, the other has yet to reach its level, being used as servant species to guide.\n\n$tec_loc_o_pops$ §H£pop£ Syncretic Coexistance§!\n- Start the game with §G+2§! additional $tec_loc_pops$ of the §Y$tec_loc_main_species$§!\n- Replace §G+12§! $tec_loc_pops$ with §YSyncretic§! $tec_loc_pops$\n\n$tec_loc_o_secondary_species$ §H£pop£ Syncretic§!\n- Starts with the ['concept_syncretic_proles'] Trait"
 
 		#VANILLA_origin_tooltip_syncretic_evolution_effects: "- £pop£ §IPops§! with ['concept_syncretic_proles'] Trait: 12"
 		
@@ -294,13 +294,33 @@ l_english:
 	origin_tooltip_hegemon_effects:2 "$tec_loc_o_condition$ §H£opinion£ Sphere of Influence§!\n- Leader of a ['concept_hegemony_federation'] ['concept_common_ground_federation']\n\n$tec_loc_o_alteration$ §H£planet£ Subjects within reach§!\n- ['concept_guaranteed_colonies'] are §YReplaced§! with Federation members\n\n$tec_loc_o_unlocks_tradition$ §H£unity£ Diplomacy§!\nStarts with the following traditions selected:\n$t$- ['concept_diplomacy_traditions']\n$t$- ['concept_tr_diplomacy_the_federation']"
 
 	# doomsday
-	origin_tooltip_doomsday_effects: "$tec_loc_o_homeworld_alteration$ §H£mod_planet_orbital_bombardment_damage£ Ticking Clock Planet§!\n- Starts with ['concept_doomsday_modifier']\n- Your Capital will §REXPLODE§! within §I35 to 45 years§!$tec_loc_planet_modifier$\n\n$tec_loc_o_penalty$ §H£trigger_no£ Nowhere to Go§!\n- There are no ['concept_guaranteed_colonies']"
+	origin_tooltip_doomsday_effects: "$tec_loc_o_homeworld_alteration$ §H£mod_planet_orbital_bombardment_damage£ Ticking Clock Planet§!\n- Starts with ['concept_doomsday_modifier'] $tec_loc_planet_modifier$\n- Your Capital will §REXPLODE§! within §I35 to 45 years§!\n\n$tec_loc_o_penalty$ §H£trigger_no£ Nowhere to Go§!\n- There are no ['concept_guaranteed_colonies']"
 
 	# lost colony
 
 	origin_tooltip_lost_colony_effects:3 "$tec_loc_o_homeworld_alteration$ §H£mod_planet_orbital_bombardment_damage£ Lost yet Alive§!\n- Starts with ['concept_colonial_spirit'] $tec_loc_planet_modifier$\n\n$tec_loc_o_condition$ §H£planet£ Where we come From§!\n- An ['concept_advanced_empire'] of the same species is present in the galaxy\n\n$tec_loc_o_penalty$ §H£mod_habitability_ceil_add£ Second Home§!\n$STARTING_NOT_HOMEWORLD$"
 	# origin_tooltip_lost_colony_negative_effects: "$STARTING_NOT_HOMEWORLD$"
+
+	# necrophage
+
+	origin_tooltip_necrophage_effects:3 "$tec_loc_o_unlocks_building$ ['concept_necrophage_elevation_chamber', §H£building£ $concept_necrophage_elevation_chamber$§!]\n- Used to §YElevate§! $tec_loc_pops$ into your §Y$tec_loc_main_species$§!\n- Starts with it on your Homeworld\n\n$tec_loc_o_pops$ §H£pop£ Prepatent Potential§!\n- Replace §G+12§! $tec_loc_pops$ with §YPrepatent§! $tec_loc_pops$\n\n$tec_loc_o_secondary_species$ §H£pop£Prepatent§!\n- Species allowed to only work §Y$tec_loc_pop_cat_specialist$§! and §Y$tec_loc_pop_cat_worker$§! Strata $tec_loc_jobs$ \n- In case of ['concept_genocidal_civics'] Civics, these $tec_loc_pops$ will be purged and assimilated into the §Y$tec_loc_main_species$§!\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $concept_necrophage_trait$§!\n- Your §Y$tec_loc_main_species$§! start with the ['concept_necrophage_trait'] Trait\n\n$tec_loc_o_homeworld_alteration$ §H£job_necro_apprentice£ Ready for Picking§!\n- ['concept_guaranteed_colonies'] are replaced with ['concept_preftl_civilizations']\n\n$tec_loc_o_penalty$ §H£pop_cat_ruler£ Elevated Ruling§!\n- Only §INecrophage $pops_with_icon$§! can be §I$tec_loc_pop_cat_ruler$§! Strata or recruited as §I$tec_loc_leaders$§!"
+	#origin_tooltip_necrophage_negative_effects: ""
+
+	# clone army
+	origin_tooltip_clone_army_effects:2 "$tec_loc_o_unlocks_trait$ §H£pop£ $concept_clone_soldier_infertile$§!\n- Your §Y$tec_loc_main_species$§! start with the ['concept_clone_soldier_infertile'] Trait\n\n$tec_loc_o_unlocks_building$ ['concept_clone_army_clone_vat', §H£building£ $concept_clone_army_clone_vat$§!]\n- Each §Y£building£ $concept_clone_army_clone_vat$§! can support up to §G20§! §Y$concept_clone_soldier_infertile$ $tec_loc_pops$§!\n- Starts with §G2§! built on your Homeworld\n\n$tec_loc_o_unlocks_technology$ §H£society_research£ Clone Technologies§!\n- Starts with ['concept_cloning', £society_research£ $tech_cloning$] and ['concept_gene_banks', £society_research£ $tech_gene_banks$] Technologies"
+
+	# sky dragon
+	civic_tooltip_aquatics_effects:1 "$tec_loc_o_homeworld_alteration$ §H£energy£ Draconic Pressence§!\n- Your home system is inhabited by a protective §ISky Dragon§!, that will become §RWrathful§! if displeased"
 	# EVOLVED
+
+	# ocean paradise
+	origin_ocean_paradise_effects_common: "$tec_loc_o_homeworld_alteration$ §H£job_angler£ Wet Paradise§!\n- Homeworld is a beautiful ['concept_pc_ocean'] (size: £planetsize£ 30)\n- Starts with ['concept_ocean_paradise_mod'] $tec_loc_planet_modifier$\n- Starts with ['concept_crystal_reef'] $tec_loc_planet_feature$"
+	origin_ocean_paradise_effects_common_penalty: "$tec_loc_o_penalty$ §H£job_angler£ Rare Gem§!\n- ['concept_guaranteed_colonies'] are replaced with ['concept_pc_frozen', Frozen Worlds]"
+
+
+	origin_ocean_paradise_effects:2 "$origin_ocean_paradise_effects_common$\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_aquatic$§!\n- Your §Y$tec_loc_main_species$§! start with the ['trait:trait_aquatic'] Trait \n\n$origin_ocean_paradise_effects_common_penalty$"
+
+	origin_ocean_machines_effects: "$origin_ocean_paradise_effects_common$\n\n$tec_loc_o_unlocks_trait$ §H£pop£ $trait_robot_aquatic$§!\n- Your §Y$tec_loc_main_species$§! start with the ['trait:trait_robot_aquatic'] Trait \n\n$origin_ocean_paradise_effects_common_penalty$"
 # ------------------------------------------------------------
  # ------------------------------------------------- Mega origins
 
