New trait adjustments + cybernetic tests

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -403,11 +403,12 @@
 
 	trait_tec_technophile:0 "Technophiles"
 	trait_tec_technophile_desc:0 "§LThe need of technological process has driven these organics to consecrate their lives to the discovery of new ways of advance, with rational thinking and scientific ideas as their main.§!"
-	trait_tec_technophile_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£job_researcher£ Researcher Output§! on the planet by §G+$@tec_technophile_boost_rate_tt$%§!, and §YResearcher Upkeep§! by §R+$@tec_technophile_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will provide §G1§! $tec_loc_unity$ instantly after a research is completed.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	trait_tec_technophile_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£job_researcher£ Researcher Output§! on the planet by §G+$@tec_technophile_boost_rate_tt$%§!, and §YResearcher Upkeep§! by §R+$@tec_technophile_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@tec_technophile_boost_techs_tt$%§! more per $tec_loc_ascension_perk$ unlocked.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	#Each $tec_loc_pop$ will provide §G1§! $tec_loc_unity$ instantly after a research is completed
 
 	trait_tec_coactive:0 "Coactive"
 	trait_tec_coactive_desc:0 "§LWhen it comes to organization, development and unitary processes, this species shine like no other, using collaborative and effective ways to maximize the efficiency at any cost.§!"
-	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£unity£ Administrator Output§! on the planet by §G+$@tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R+$@tec_coactive_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+0.5%§! more per $tec_loc_ascension_perk$ unlocked.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+	trait_tec_coactive_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increase §Y£unity£ Administrator Output§! on the planet by §G+$@tec_coactive_boost_rate_tt$%§!, and §YAdministrator Upkeep§! by §R+$@tec_coactive_upkeep_rate_tt$%§!.\nEach $tec_loc_pop$ will produce §G+$@tec_coactive_boost_ascension_tt$%§! more per researched $tec_loc_technology$.\n\n§HEffect doubled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 # /
 
 
