--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -223,6 +223,9 @@
 	tec_loc_district_plural:0 "£district£ Districts"
 	tec_loc_district_icon:0 "£district£"
 
+	tec_loc_technology:0 "£job_researcher£ Technology"
+	tec_loc_technologies:0 "£job_researcher£ Technologies"
+
 	tec_loc_planet_ascension:0 "£unity£ Planet Ascension"
 	tec_loc_planet_ascensions:0 "£unity£ Planet Ascensions"
 	tec_loc_planet_ascension_plural:0 "$tec_loc_planet_ascensions$"
