feat: more tooltip improvements

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -305,7 +305,7 @@
 
 # Offspring
 
- job_offspring_drone_effect_desc:1 "£job_spawning_drone£ $job_offspring_drone_plural$ increase £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and generate §Y$tec_loc_unity$§! and other resources depending on designation, spawn §Y$offspring_defense_plural$§!, and provide a £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! increase in §Y$pop_cat_simple_drone$ output§!."
+ job_offspring_drone_effect_desc:1 "£job_spawning_drone£ $job_offspring_drone_plural$ increase £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and generate §Y$tec_loc_unity$§! and other resources depending on §Y$tec_loc_planet_designation$§!, spawn §Y$offspring_defense_plural$§!, and provide a £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! increase in §Y$pop_cat_simple_drone$ output§!."
 
 # Organic throphy descriptions
 
