trait variable normalization

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -52,11 +52,44 @@
 	trait_tec_og_golden_touch_desc:0 "§LExcellence is the only accepted outcome when it comes to create, elaborate, discuss or produce something for this species, and as such a well organised and in some cases too perfect society developed around it.§!"
 	TRAIT_TEC_OG_GOLDEN_TOUCH_EFFECT:0 "Population Growth and Assembly speed: §R-50%§!\nTotal Assimilation fail chance: §R+50%§!\n§YBase resource production from all £job£ jobs: §G+50%§!§!\n\nBase production §Hscale§! with other modifiers\n"
 
-	# Regular
-	trait_tec_vigorous:0 "Vigorous"
-	trait_tec_vigorous_desc:0 "§LWhen it comes to existing, this species can adapt themselves to either favorable or spartan environments, with minimal maintenance, while enduring physically and mentally situations where others would fail.§!"
-	trait_tec_delicate:0 "Delicate"
-	trait_tec_delicate_desc:0 "§LThe strange and fragile physio and psychology of this species makes them extremely dependant of external use of luxuries or extra basic necessities covered by regular maintenance.§!"
+	# Amenities use %
+	trait_tec_amenities_spartan:0 "Spartan"
+	trait_tec_amenities_spartan_desc:0 "§LThis species is completely adapted to an austere existence, trying to obtain the maximum out of even the harsher conditions.§!"
+	trait_tec_amenities_spartan_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §G-$@trait_tec_spartan_amenities_usage$§!\nArmy Health: §G+$@trait_tec_spartan_army_rate_tt$%§!"
+
+	trait_tec_amenities_delicate:0 "Delicate"
+	trait_tec_amenities_delicate_desc:0 "§LThe strange and fragile physio and psychology of this species makes them extremely dependant of external use of luxuries or extra basic necessities covered by regular maintenance.§!"
+	trait_tec_amenities_delicate_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_delicate_amenities_usage$§!\nArmy Health: §R-$@trait_tec_delicate_army_rate_tt$%§!"
+
+	# Amenities use add
+	trait_tec_amenities_vigorous:0 "Vigorous"
+	trait_tec_amenities_vigorous_desc:0 "§LWhen it comes to existing, this species can adapt themselves to either favorable or spartan environments, with minimal maintenance, while enduring physically and mentally situations where others would fail.§!"
+
+	trait_tec_amenities_fragile:0 "Fragile"
+	trait_tec_amenities_fragile_desc:0 "§LThe way these organisms operate involve several specific caretaking and monitoring to avoid injuries, illness or mental ill-being, as they tend to fall into those with ease.§!"
+	trait_tec_amenities_fragile_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_fragile_amenities_add$§!\nArmy Damage: §R$@trait_tec_fragile_army_rate_tt$%§!"
+
+	trait_tec_amenities_diminished:0 "Diminished"
+	trait_tec_amenities_diminished_desc:0 "§LWhile not physically weak per se, this species require of extreme measures, practices and conditioning for surviving, as its organism is inherently difficult to maintain and prone to physical and mental illnesses.§!"
+	trait_tec_amenities_diminished_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_diminished_amenities_add$§!\nArmy Damage: §R$@trait_tec_diminished_army_rate_tt$%§!"
+
+	# CG upkeep
+	trait_tec_goods_upkeep_extreme:0 "Prodigal"
+	trait_tec_goods_upkeep_extreme_desc:0 "§LWhen it comes to relentless consumption and use of available comodities, this species have no second thoughts nor remorse.§!"
+	trait_tec_goods_upkeep_extreme_effect:0 ""
+
+	trait_tec_goods_upkeep_superefficient:0 "Parsimonious"
+	trait_tec_goods_upkeep_superefficient_desc:0 "§LWorried about the usage of available goods, this species is really unwilling to waste or misuse what is at their disposal.§!"
+	trait_tec_goods_upkeep_superefficient_effect:0 ""
+
+	trait_tec_goods_lavish:0 "Lavish"
+	trait_tec_goods_lavish_desc:0 "§LSmall whims, luxury and satisfaction drives all the members of this species.§!"
+	trait_tec_goods_lavish_effect:0 "$tec_loc_pops$ $tec_loc_cgs$ Upkeep: §R+$@trait_tec_goods_lavish_rate$§!\n\n§HReduced happiness on low living standards.§!"
+
+	trait_tec_goods_opulent:0 "Opulent"
+	trait_tec_goods_opulent_desc:0 "§LA life of excess, riches and wasteful pleasure characterize this species, whose members attempt to enjoy the pleasures of the material in any consumable way.§!"
+	trait_tec_goods_opulent_effect:0 "$tec_loc_pops$ $tec_loc_cgs$ Upkeep: §R+$@trait_tec_goods_opulent_rate$§!\n\n§HReduced happiness on low living standards.§!"
+
 
 	trait_tec_clone_template:0 "Genetic Template"
 	trait_tec_clone_template_desc:0 "§LThis species developed a genetic template which allows them to easily manipulate how their individuals are cloned or grown in vats, at the cost of a lower birth rate and decreased lifespan.§!\n"
