--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1087,12 +1087,12 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_zombification:0 "Necrotic Zombification"
 	trait_tec_zombification_desc:0 "§LDeath doesn't mean an end for this species, as part of its population raise after its demise, haunting and preying upon the living or serving as mindless workforce, driven by the most basic instincts.§!"
-	trait_tec_zombification_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G10%§! and §G50%§! chance, proportional to the number of pops on the planet, for succumb to ['concept_tec_zombification_icon', §R£job_purge Zombification§!] instantly.\n\nAllows the recruitment of §R£job_purge£ Feral Zombies§! armies."
+	trait_tec_zombification_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G$@tec_zombification_min_rate$%§! and §G$@tec_zombification_max_rate$%§! chance, proportional to the number of pops on the planet, for succumb to ['concept_tec_zombification_icon', §R£job_purge Zombification§!] instantly.\n\nAllows the recruitment of §R£job_purge£ Feral Zombies§! armies."
 
  	concept_tec_zombification:0 "Zombification"
 	concept_tec_zombification_icon:0 "§R£job_purge Zombification§!"
 	concept_tec_zombification_help_icon:0 "£trigger_tec_question£"
-	concept_tec_zombification_desc:0 "The affected pop will gain the ['trait:trait_zombie'] trait.\nDepending on the number of §R£job_purge£ Zombie§! pops on the planet, the affected pop will intantly die instead."
+	concept_tec_zombification_desc:0 "The affected pop will gain the ['trait:trait_zombie'] trait.\nDepending on the number of §R£job_purge£ Zombie§! pops on the planet, the affected pop will intantly die instead (§Y1%§! chance per zombie pop, up to §R$@tec_zombification_max_kill_chance$%§!)."
 
 
 	trait_tec_positive_thoughts:0 "Positivist"
@@ -1199,36 +1199,8 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_robot_upkeep_low_effect:0 "TODO TRAIT reduce species upkeep even more"
 
 	# Amenities add
-	trait_tec_amenities_spartan:0 "Spartan"
-	trait_tec_amenities_spartan_desc:0 "§LThis species is completely adapted to an austere existence, trying to obtain the maximum out of even the harsher conditions.§!"
-	trait_tec_amenities_spartan_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §G$@trait_tec_spartan_amenities_add$§!\n$tec_loc_habitability$: §G+$@trait_tec_spartan_habitability_rate_tt$%§!"
-
-	trait_tec_amenities_fragile:0 "Fragile"
-	trait_tec_amenities_fragile_desc:0 "§LThe way these organisms operate involve several specific caretaking and monitoring to avoid injuries, illness or mental ill-being, as they tend to fall into those with ease.§!"
-	trait_tec_amenities_fragile_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_fragile_amenities_add$§!\nArmy Health: §R$@trait_tec_fragile_army_health_rate_tt$%§!"
-
-	trait_tec_amenities_diminished:0 "Diminished"
-	trait_tec_amenities_diminished_desc:0 "§LWhile not physically weak per se, this species require of extreme measures, practices and conditioning for surviving, as its organism is inherently difficult to maintain and prone to physical and mental illnesses.§!"
-	trait_tec_amenities_diminished_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_diminished_amenities_add$§!\nArmy Health: §R$@trait_tec_diminished_army_health_rate_tt$%§!"
-
+	# Done
 	# CG
-
-	trait_tec_goods_upkeep_extreme:0 "Prodigal"
-	trait_tec_goods_upkeep_extreme_desc:0 "§LWhen it comes to relentless consumption and use of available comodities, this species have no second thoughts nor remorse.§!"
-	trait_tec_goods_upkeep_extreme_effect:0 ""
-
-	trait_tec_goods_upkeep_superefficient:0 "Parsimonious"
-	trait_tec_goods_upkeep_superefficient_desc:0 "§LWorried about the usage of available goods, this species is really unwilling to waste or misuse what is at their disposal.§!"
-	trait_tec_goods_upkeep_superefficient_effect:0 ""
-
-	trait_tec_goods_lavish:0 "Lavish"
-	trait_tec_goods_lavish_desc:0 "§LSmall whims, luxury and satisfaction drives all the members of this species.§!"
-	trait_tec_goods_lavish_effect:0 "$tec_loc_pops$ $tec_loc_cgs$ Upkeep: §R+0.1§!\n\n§HReduced happiness on low living standards.§!"
-
-	trait_tec_goods_opulent:0 "Opulent"
-	trait_tec_goods_opulent_desc:0 "§LA life of excess, riches and wasteful pleasure characterize this species, whose members attempt to enjoy the pleasures of the material in any consumable way.§!"
-	trait_tec_goods_opulent_effect:0 "$tec_loc_pops$ $tec_loc_cgs$ Upkeep: §R+0.2§!\n\n§HReduced happiness on low living standards.§!"
-
 
 	# Amenities machine
 	trait_tec_robot_extreme_maintenance:0 "Defective Serialization"
